turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:9: error: ':' expected but ')' found.
def quart(c) {
           ^DiskFour:16: error: identifier expected but '}' found.
}
^